--- a/customer_info.html
+++ b/customer_info.html
@@ -88,7 +88,7 @@
       
                               <div class="col-12 mb-3 mb-md-0 col-md-4 order-1 order-md-2 text-center">
                                   <div class="site-logo">
-                                      <a href="" class="js-logo-clone">ESS</a>
+                                      <a href="index.html" class="js-logo-clone">ESS</a>
                                   </div>
                               </div>
       
